<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            >
            <TextView
                style="@style/TextContent"
                android:text="@string/surat_keterangan_sehat"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <View
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_height="3dp"
                android:background="@color/colorAbu"
                />

            <TextView
                style="@style/TextContent"
                android:text="@string/opening"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/view_nama"
                style="@style/TextContent"
                android:hint="@string/nama"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/view_berat"
                style="@style/TextContent"
                android:hint="@string/berat_badan"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/view_tinggi"
                style="@style/TextContent"
                android:hint="@string/tinggi_badan"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/view_tensi"
                style="@style/TextContent"
                android:hint="@string/tekanan_darah"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/view_keterangan"
                style="@style/TextContent"
                android:gravity="left|top"
                android:hint="@string/keterangan_surat_kesehatan"
                android:maxLines="10"
                android:minLines="3"
                android:textSize="15sp"
                />

            <TextView
                style="@style/TextContent"
                android:text="@string/dalam_kondisi"
                android:textSize="15sp"
                />

            <RadioGroup
                android:id="@+id/radio_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_sehat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SEHAT" />

                <RadioButton
                    android:id="@+id/radio_tdksehat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TIDAK SEHAT" />
            </RadioGroup>

            <TextView
                style="@style/TextContent"
                android:text="@string/closing"
                android:textSize="15sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:text="@string/tertanda"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="30dp"
                android:text="@string/dokter"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>